# code-generation-agents-with-knowledge-bases

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  run_analysis.py  run_evaluation.py  run_experiments.py  run_summary.py
analysis/: analyze_self_improving.py
src/: prompts.py
src/cli/: arguments.py  common_arguments.py  evaluation_arguments.py  experiment_arguments.py
src/config/: experiment_config.py
src/evaluation/: code_evaluator.py
src/experiment/: base_experiment.py  factory.py  mbpp_experiment.py  reflector_experiment.py  single_model_experiment.py  utils.py  vector_search.py
src/experiment/few_shot/: __init__.py  few_shot_dual_model_self_improving_experiment.py  few_shot_experiment.py  few_shot_self_improving_experiment.py
src/experiment/knowledge_base/: __init__.py  knowledge_base_experiment.py
src/experiment/zero_shot/: __init__.py  zero_shot_dual_model_self_improving.py  zero_shot_experiment.py  zero_shot_self_improving_experiment.py
