[project]
name = "code-generation-agents-with-knowledge-bases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "smolagents>=1.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
