[project]
name = "small-gemma-models-for-code-generation"
version = "0.1.0"
description = "This research project investigates whether smaller Gemma models (1B, 4B) can achieve code generation capabilities comparable to their larger counterparts (12B, 27B) through various enhancement techniques."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "smolagents>=1.12.0",
    "sentence-transformers>=2.5.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
